--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,22 +6,28 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \\\\\\\".js,.vue\\\\\\\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \\\\\\\"**/*.{css,scss,sass,html,vue}\\\\\\\" --ignore-path .gitignore",
-    "lint:prettier": "prettier --check .",
-    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
-    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix"
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "@azure/cosmos": "^3.17.2",
+    "@azure/identity": "^3.1.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/i18n": "^7.3.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@types/jsonwebtoken": "^9.0.1",
     "axios": "^1.2.1",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
     "nuxt": "^2.15.8",
     "ufo": "^1.0.1",
+    "uuid": "^9.0.0",
+    "vee-validate": "^3.4.14",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
@@ -35,6 +41,7 @@
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@types/cors": "^2.8.13",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
